service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapplication-app-svc
  namespace: k8s-demo
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: myapplication
